[gd_scene load_steps=9 format=1]

[ext_resource path="res://Pri.gd" type="Script" id=1]
[ext_resource path="res://Tiparoj/jomhuria.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Temoj/Butono_sxveba.tres" type="StyleBox" id=3]
[ext_resource path="res://Temoj/Butono_premita.tres" type="StyleBox" id=4]
[ext_resource path="res://Temoj/Butono.tres" type="StyleBox" id=5]
[ext_resource path="res://Tiparoj/roboto.fnt" type="BitmapFont" id=6]
[ext_resource path="res://GUI/reen.png" type="Texture" id=7]
[ext_resource path="res://Sonoj/Tabloj/130428__mmiron__na-sharp.ogg" type="AudioStream" id=8]

[node name="Pri" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 560.0
script/script = ExtResource( 1 )

[node name="Versio" type="Label" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = -470.0
margin/right = 240.0
margin/bottom = -560.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "v1.0.0a"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fontkodo" type="Button" parent="."]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -600.0
margin/bottom = -100.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fontkodo"
flat = false

[node name="Atribuoj" type="Button" parent="."]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -160.0
margin/right = -600.0
margin/bottom = -260.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Atribuoj"
flat = false

[node name="Fono" type="Polygon2D" parent="."]

polygon = Vector2Array( 0, 700, 600, 700, 600, 860, 0, 860 )
uv = Vector2Array(  )
color = Color( 0.258824, 0.258824, 0.258824, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Bitcoin" type="LinkButton" parent="."]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = 740.0
margin/right = 1463.0
margin/bottom = 819.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.960784, 0.960784, 0.960784, 1 )
custom_colors/font_color_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "bitcoin:1PUJ5sFWxvbx5Np2CjFmhHFnzPe2GPvinj"
underline = 2

[node name="Litecoin" type="LinkButton" parent="."]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 800.0
margin/right = 1460.0
margin/bottom = 879.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.960784, 0.960784, 0.960784, 1 )
custom_colors/font_color_pressed = Color( 0.878431, 0.878431, 0.878431, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "litecoin:LgeGeVU9JAxyXpanPtsBRAX5QHxvUJo8id"
underline = 2

[node name="Reen" type="Button" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 530.0
margin/top = 0.0
margin/right = 670.0
margin/bottom = 140.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = false

[node name="Enveno_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = 5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="Fontkodo" to="." method="_on_Fontkodo_pressed"]

[connection signal="pressed" from="Atribuoj" to="." method="_on_Atribuoj_pressed"]

[connection signal="pressed" from="Bitcoin" to="." method="_on_Bitcoin_pressed"]

[connection signal="pressed" from="Litecoin" to="." method="_on_Litecoin_pressed"]

[connection signal="pressed" from="Reen" to="." method="_on_Reen_pressed"]


